--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^11.1.2",
     "prismjs": "1.17.1",
     "react": "^17.0.2",
+    "react-chrono": "^1.19.2",
     "react-dom": "^17.0.2",
     "uuid": "8.1.0"
   },
