--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^0.1.2",
     "@zeit/react-jsx-parser": "2.0.0",
     "async-sema": "3.1.0",
+    "firebase": "^9.13.0",
     "github-slugger": "1.2.1",
     "katex": "0.12.0",
     "next": "^11.1.2",
